crates/texlab/src/parser/snapshots/texlab__parser__latex__tests__parse@graphics_path.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/graphics_path.txt
---
ROOT@0..28
  PREAMBLE@0..28
    GRAPHICS_PATH@0..28
      COMMAND_NAME@0..13 "\\graphicspath"
      CURLY_GROUP@13..28
        L_CURLY@13..14 "{"
        CURLY_GROUP_WORD@14..27
          L_CURLY@14..15 "{"
          KEY@15..26
            WORD@15..26 "../figures/"
          R_CURLY@26..27 "}"
        R_CURLY@27..28 "}"

