crates/texlab/src/parser/snapshots/texlab__parser__latex__tests__parse@graphics_path_options.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/graphics_path_options.txt
---
ROOT@0..33
  PREAMBLE@0..33
    GRAPHICS_PATH@0..13
      COMMAND_NAME@0..13 "\\graphicspath"
    MIXED_GROUP@13..18
      L_BRACK@13..14 "["
      TEXT@14..17
        WORD@14..17 "foo"
      R_BRACK@17..18 "]"
    CURLY_GROUP@18..33
      L_CURLY@18..19 "{"
      CURLY_GROUP@19..32
        L_CURLY@19..20 "{"
        TEXT@20..31
          WORD@20..31 "../figures/"
        R_CURLY@31..32 "}"
      R_CURLY@32..33 "}"

