crates/texlab/src/parser/snapshots/texlab__parser__latex__tests__parse@hello_world.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/hello_world.txt
---
ROOT@0..12
  PREAMBLE@0..12
    TEXT@0..12
      WORD@0..5 "Hello"
      WHITESPACE@5..6 " "
      WORD@6..12 "World!"

