crates/texlab/src/parser/snapshots/texlab__parser__latex__tests__parse@parameter_error.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/parameter_error.txt
---
ROOT@0..1
  PREAMBLE@0..1
    TEXT@0..1
      WORD@0..1 "#"

